# plumbprice

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.prod.yml  docker-compose.yml  fix_sidebar.py  pytest-worker.ini  pytest.ini  recondesk.py  requirements.txt  run_backend_optimizations.sh  setup.py  start-api.sh
api/: Dockerfile  alembic.ini  create_new_admin.py  patch_step1.py  patch_step2_3.py  patch_step2_fix.py  pyproject.toml  requirements.txt  restore_admin.py
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  07027b470d0d_merge_phase6_soft_delete_with_user_.py  07267bc91839_merge_p6_a.py  5f0cefc42b4b_add_projects_created_at_updated_at_.py  71db5c2b547a_add_tax_rates_table.py  p2p1p1_photo_geo.py  (+22 more)
api/app/: config.py  database.py  main.py  observability.py
api/scripts/: create_admin.py  import_external_templates.py  run_eval.py  seed_db.py  verify_ai.py
api/tests/: conftest.py  test_addon_suggestions.py  test_admin_organization.py  test_admin_users.py  test_admin_worker_ops.py  test_analytics.py  test_auth.py  test_auth_jwt.py  test_auth_password_reset.py  test_blueprint_to_estimate.py  test_chat_attachments.py  test_circuit_breaker.py  test_customer_status_portal.py  test_doc_generation.py  test_estimate_customer_capture.py  test_estimate_editing.py  test_external_providers.py  test_jobcost_service.py  test_main.py  test_notifications.py  test_price_drift.py  test_project_activity.py  test_proposal_acceptance.py  test_proposal_pdf.py  test_public_agent_audit.py  test_scoped_memory.py  test_winrate_service.py
(+832 files in other folders)
