[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "plumbprice-ai-api"
version = "0.1.0"
description = "PlumbPrice AI - Autonomous plumbing pricing and estimating platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
